<resources>
    <string name="app_name">Book Library</string>
    <string name="hint_search_for_books">Search for books</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_library">Library</string>
    <string name="lbl_ebooks">Ebooks</string>
    <string name="lbl_audio_books">Audiobooks</string>
    <string name="lbl_your_books">Your Books</string>
    <string name="lbl_your_shelves">Your Shelves</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_make_as_read">Make as read</string>
    <string name="lbl_add_to_shelves">Add to Shelves</string>
    <string name="lbl_sort_by">Sort By:</string>
    <string name="lbl_list">List</string>
    <string name="lbl_view_as">View As</string>
    <string name="lbl_large">Large</string>
    <string name="lbl_small">Small</string>
    <string name="lbl_create_shelf">Create Shelf</string>
    <string name="hint_shelf_name">Shelf name</string>
    <string name="lbl_create_new_shelf">Create New Shelf</string>
    <string name="lbl_rename_shelf">Rename Shelf</string>
    <string name="free_sample">Free Sample</string>
    <string name="add_to_wishlist">Add to wishList</string>
    <string name="about_book">About Book</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="recent_open">Recent Open</string>
    <string name="sort_by">Sort By</string>
</resources>