<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_large"
    android:paddingVertical="@dimen/margin_medium"
    tools:context=".activities.BookDetailActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            app:srcCompat="@drawable/ic_arrow_left_24"
            app:tint="@color/color_dark_grey" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUpload"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin_medium"
            app:srcCompat="@drawable/ic_upload"
            app:tint="@color/color_dark_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlBookInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlHeader"
        android:layout_marginVertical="@dimen/margin_medium_2">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivSearchBook"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            app:shapeAppearanceOverlay="@style/ImageView.Corner"
            app:srcCompat="@drawable/book" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivSearchBook"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/margin_medium_2"
            android:paddingVertical="@dimen/margin_medium"
            android:text="Title"
            android:textSize="@dimen/text_regular"
            app:fontFamily="@font/poppins_medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBookTitle"
            android:layout_toEndOf="@id/ivSearchBook"
            android:paddingHorizontal="@dimen/margin_medium_2"
            android:paddingVertical="@dimen/margin_medium"
            android:text="Author"
            android:textSize="@dimen/text_small"
            app:fontFamily="@font/poppins_regular" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlBookInfo"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_btn"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_weight="2"
            android:text="@string/free_sample"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_btn"
            android:layout_weight="3"
            android:text="@string/add_to_wishlist"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_bookmark_add_24" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlAboutBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlPurchase"
        android:layout_marginVertical="@dimen/margin_medium">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAboutBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_book"
            android:textSize="@dimen/text_regular_2x"
            app:fontFamily="@font/poppins_medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAboutBook"
            android:maxLines="7"
            android:ellipsize="end"
            android:text="@string/lorem" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlAboutBook"
        android:layout_marginVertical="@dimen/margin_medium">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rating"
            android:textSize="@dimen/text_regular_2x"
            app:fontFamily="@font/poppins_medium" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/llRating"
        android:layout_below="@id/rlRating"
        android:weightSum="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rlRatingMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMainRating"
                android:text="3.9"
                app:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_big_2x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RatingBar
                android:id="@+id/rdRate"
                android:numStars="5"
                android:rating="3.9"
                style = "?android:attr/ratingBarStyleSmall"
                android:layout_below="@id/tvMainRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="95Rating"
                android:layout_below="@id/rdRate"
                />
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_toEndOf="@id/rlRatingMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/rlRatingMain"
            >
            <com.stone.booklibrary.viewpods.LineProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                app:lineProgressBarColor="@color/colorPrimary"
                app:lineProgressBarThickness="10dp"
                app:lineProgressValue="55"
                app:maxLineValue="100"
                app:minLineValue="0" />
            <com.stone.booklibrary.viewpods.LineProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                app:lineProgressBarColor="@color/colorPrimary"
                app:lineProgressBarThickness="10dp"
                app:lineProgressValue="55"
                app:maxLineValue="100"
                app:minLineValue="0" />
            <com.stone.booklibrary.viewpods.LineProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                app:lineProgressBarColor="@color/colorPrimary"
                app:lineProgressBarThickness="10dp"
                app:lineProgressValue="55"
                app:maxLineValue="100"
                app:minLineValue="0" />
            <com.stone.booklibrary.viewpods.LineProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                app:lineProgressBarColor="@color/colorPrimary"
                app:lineProgressBarThickness="10dp"
                app:lineProgressValue="55"
                app:maxLineValue="100"
                app:minLineValue="0" />
            <com.stone.booklibrary.viewpods.LineProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                app:lineProgressBarColor="@color/colorPrimary"
                app:lineProgressBarThickness="10dp"
                app:lineProgressValue="55"
                app:maxLineValue="100"
                app:minLineValue="0" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlComment"
        android:layout_below="@id/llRating"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivP1"
                app:srcCompat="@drawable/ic_person_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvP1"
                android:text="Name"
                android:layout_toEndOf="@id/ivP1"
                android:layout_marginStart="@dimen/margin_medium_2"
                app:fontFamily="@font/poppins_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RatingBar
                android:id="@+id/rdRateItem"
                android:numStars="5"
                android:rating="3.9"
                style = "?android:attr/ratingBarStyleSmall"
                android:layout_toEndOf="@id/ivP1"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_below="@id/ivP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>